[package]
name = "roc-lang"
version = "0.0.1"
authors = ["Matthew O'Connor <thegreendragon@gmail.com>"]
build = "build.rs" # LALRPOP preprocessing

[dependencies.regex]
version = "0.2.0"

# Add a dependency on the LALRPOP runtime library:
[dependencies.lalrpop-util]
version = "0.13.1"

[build-dependencies.lalrpop]
version = "0.13.1"
